# cog-tiler-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  cog-tiler.d.ts  cog-tiler.js  package.json  sampling.js
.github/workflows/: ci.yml  pages.yml  release.yml
crates/cog-tiler-wasm/: Cargo.toml
crates/cog-tiler-wasm/src/: colormap.rs  lib.rs  mercator.rs
demo/: cog-tiler.js  index.html
examples/: sample-3857-cog.tif
scripts/: assemble-demo.mjs  gen-colormaps.mjs  prepare-pkg.mjs  serve-demo.mjs
scripts/data/: colormaps-index.json
tests/: sample-window-bilinear.test.mjs
