[workspace]
members = ["crates/cog-tiler-wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/opengeos/cog-tiler-wasm"
authors = ["Qiusheng Wu <giswqs@gmail.com>"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
