[package]
name = "cog-tiler-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Serverless Cloud Optimized GeoTIFF (COG) dynamic tiling in WebAssembly. TiTiler-style XYZ tiles, no backend."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# The release profile already optimizes for size (opt-level = "z", lto). Skip the
# wasm-opt post-step: it depends on a locally cached binaryen whose validator can
# lag the wasm features emitted by current rustc/wasm-bindgen.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
